[tool.poetry]
name = "cardano_exchanges_analysis"
version = "0.1.0"
description = "Cardano Blockchain Analysis for DeFiExcahnges"
authors = ["edgardoa91 <edgardoa910@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pywebcopy = "^7.0.2"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
